Sunday week7 workouts

--- a/journey-insights.html
+++ b/journey-insights.html
@@ -207,6 +207,116 @@
   </div>
 </details>
 
+<!-- Insight 05 -->
+
+<details class="insight" id="insight-apple-watch-hyrox">
+  <summary>
+    <div class="q-icon" aria-hidden="true">
+      <span style="font-weight:800; color: var(--accent);">?</span>
+    </div>
+    <div class="q-title">
+      <div class="kicker">INSIGHT #05 • Apple Watch HYROX Race Setup</div>
+      <p class="question">
+        How can you set up an Apple Watch to coach HR zones + time cues on race day when Multisport won’t allow strength segments?
+      </p>
+    </div>
+    <div class="chev" aria-hidden="true">⌄</div>
+  </summary>
+
+  <div class="answer">
+    <p>
+      If you want <strong>HR zone alerts</strong>, <strong>time cues</strong>, and clean <strong>run vs station splits</strong> on HYROX race day,
+      Apple Watch has one big limitation: <strong>Multisport only supports endurance modes</strong> (run/cycle/swim). No Functional Strength,
+      no HIIT, and no “Other.”
+    </p>
+
+    <p>
+      The simplest race-proof workaround is a clean hack:
+      <strong>use Indoor Run for every run segment</strong> and <strong>Indoor Cycle for every station segment</strong>.
+      You still get one continuous workout with clear segment splits — and your watch becomes a quiet coach instead of a distraction.
+    </p>
+
+    <div class="callout">
+      <strong>Setup concept:</strong> <span style="white-space:nowrap;"><strong>Indoor Run = Runs</strong></span> •
+      <span style="white-space:nowrap;"><strong>Indoor Cycle = Stations</strong></span> •
+      <span style="white-space:nowrap;"><strong>Open segments</strong> (manual “Next” at transitions)</span>
+    </div>
+
+    <h4 style="margin:14px 0 8px;">✅ Step-by-step: Build the Multisport workout</h4>
+    <ol>
+      <li>On Apple Watch, open <strong>Workout</strong></li>
+      <li>Tap <strong>Multisport</strong></li>
+      <li>Tap the <strong>…</strong> menu</li>
+      <li>Select <strong>Create Workout</strong></li>
+      <li>Add segments in this order (set each to <strong>Open</strong> / manual advance):</li>
+    </ol>
+
+    <ul>
+      <li><strong>Indoor Run</strong> (Run 1)</li>
+      <li><strong>Indoor Cycle</strong> (Station 1 – SkiErg)</li>
+      <li><strong>Indoor Run</strong> (Run 2)</li>
+      <li><strong>Indoor Cycle</strong> (Station 2 – Sled Push)</li>
+      <li><strong>Indoor Run</strong> (Run 3)</li>
+      <li><strong>Indoor Cycle</strong> (Station 3 – Sled Pull)</li>
+      <li><strong>Indoor Run</strong> (Run 4)</li>
+      <li><strong>Indoor Cycle</strong> (Station 4 – Burpee Broad Jumps)</li>
+      <li><strong>Indoor Run</strong> (Run 5)</li>
+      <li><strong>Indoor Cycle</strong> (Station 5 – Row)</li>
+      <li><strong>Indoor Run</strong> (Run 6)</li>
+      <li><strong>Indoor Cycle</strong> (Station 6 – Farmers Carry)</li>
+      <li><strong>Indoor Run</strong> (Run 7)</li>
+      <li><strong>Indoor Cycle</strong> (Station 7 – Sandbag Lunges)</li>
+      <li><strong>Indoor Run</strong> (Run 8)</li>
+      <li><strong>Indoor Cycle</strong> (Station 8 – Wall Balls)</li>
+    </ul>
+
+    <p style="margin-top:10px; color: var(--muted);">
+      Don’t stress about perfectly labeling each station on the watch — the value comes from <strong>separate splits</strong>
+      for runs vs stations and the <strong>alerts</strong> that keep you honest.
+    </p>
+
+    <h4 style="margin:14px 0 8px;">🏃 Configure Indoor Run alerts (for all run segments)</h4>
+    <ul>
+      <li><strong>Split alerts:</strong> every <strong>0.31 miles</strong> (≈ 500 m)</li>
+      <li><strong>Time alerts:</strong> every <strong>3 minutes</strong> (a rhythm cue tied to your goal pace)</li>
+      <li><strong>Heart Rate alerts:</strong> <strong>Zone 4</strong> so you get <em>below / in range / above</em> feedback</li>
+    </ul>
+
+    <div class="callout">
+      <strong>Important Apple Watch limitation:</strong> Apple Watch does <strong>not</strong> allow separate alerts per run segment inside Multisport.
+      Whatever you set for <strong>Indoor Run</strong> will apply to <strong>every run</strong>.
+    </div>
+
+    <h4 style="margin:14px 0 8px;">🚴 Configure Indoor Cycle alerts (for all stations)</h4>
+    <ul>
+      <li><strong>Heart Rate alerts:</strong> <strong>Zone 5 only</strong> (a red-flag “slow down / micro-rest” trigger)</li>
+      <li><strong>Time alerts:</strong> every <strong>5 minutes</strong> (a calm checkpoint vs your typical 4–6 minute stations)</li>
+    </ul>
+
+    <h4 style="margin:14px 0 8px;">🏁 Race-day execution</h4>
+    <p>
+      During the race, you only do one thing: <strong>tap “Next” at each transition</strong>.
+      Finish the run → tap Next → station starts. Finish the station → tap Next → run starts.
+    </p>
+
+    <ul>
+      <li><strong>Run HR cue (Zone 4):</strong> if you’re above range early, back off now — you’re burning matches.</li>
+      <li><strong>Station HR cue (Zone 5):</strong> if Zone 5 hits, take a short reset (2–5 seconds), breathe, then re-attack.</li>
+      <li><strong>5-minute station cue:</strong> treat it as a finish trigger — <em>“If I hear it, I’m closing this out.”</em></li>
+    </ul>
+
+    <div class="callout">
+      <strong>Key takeaway:</strong> HYROX is a <strong>time + fatigue management race</strong>. This setup gives you the two things that matter most:
+      <strong>physiology guardrails</strong> (HR zones) and <strong>time awareness</strong> (pace + station checkpoints) — without turning your watch into a distraction.
+    </div>
+
+    <p style="margin-top:12px; color: var(--muted);">
+      Bonus race-proofing: tighten the band one notch before the start for better HR accuracy, and consider Water Lock to prevent accidental touches.
+      The goal is simple: <strong>start controlled, stay composed in stations, and earn the right to race hard late.</strong>
+    </p>
+  </div>
+</details>
+
 
       <!-- Add more insights below by duplicating a <details class="insight"> block -->
       <!--
