--- a/workouts.html
+++ b/workouts.html
@@ -1817,7 +1817,555 @@
 </div>
 </article>
 <!-- Sunday 1/18/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Sunday – 07</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 10.75 hrs · Score 84</li>
+<li><strong>HRV:</strong> 75 ms · <strong>Resting HR:</strong> 55 bpm</li>
+<li><strong>VO₂ Max:</strong> 47.3</li>
+<li><strong>Weight:</strong> 178.1 lb · 11.9% BF · Lean Mass 143.2 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2356 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill Run / Walk</span>
+<span class="session-meta">9.5 min · 0.62 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Run / Walk</td>
+<td>-</td>
+<td>9.5 min</td>
+<td>-</td>
+<td>Yes</td>
+<td>walk 4.2 MPH</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>9.5 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Lunges</span>
+<span class="session-meta">1.75 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 3</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Lunges </td>
+<td>2 × 15 @ 45 lb</td>
+<td>100 sec</td>
+<td>Alternating</td>
+<td>Lunges</td>
+<td>30 eaach leg 45 lb sandbag</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0.45 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0.5 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0.8 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill Run</span>
+<span class="session-meta">5.25 min · 0.62 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 3</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Run</td>
+<td>-</td>
+<td>5.25 min</td>
+<td>-</td>
+<td>Yes</td>
+<td>Run 7.5 MPH 5:15 1k </td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0.5 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>4.25 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0.5 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Wall Balls</span>
+<span class="session-meta">1.5 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 4</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Wall Balls</td>
+<td>2 × 25 @ 14 lb</td>
+<td>90 sec</td>
+<td>Both</td>
+<td>Wall Ball</td>
+<td>50 total wall balls 14 lbs </td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0.5 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>1 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill Cool Down Walk</span>
+<span class="session-meta">10 min · 0.62 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 2</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Cool Down Walk</td>
+<td>-</td>
+<td>10 min</td>
+<td>-</td>
+<td>Zone 3 -> 1 Cool down</td>
+<td>Raise VO2 Max session</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>5.75 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>4.25 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Stretch cool down</span>
+<span class="session-meta">15 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Periformis stretch</td>
+<td>4 × 1</td>
+<td>30 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Hamstring stretch</td>
+<td>4 × 1</td>
+<td>30 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each set</td>
+</tr>
+<tr>
+<td>Calf Stretch</td>
+<td>4 × 1</td>
+<td>30 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Hip Flexor Stretch</td>
+<td>4 × 1</td>
+<td>30 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Tibialias Anterior Stretch</td>
+<td>4 × 1</td>
+<td>30 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Quad Stretch</td>
+<td>4 × 1</td>
+<td>30 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 Second Slow Roller</td>
+</tr>
+<tr>
+<td>T-splne / Chest stretch</td>
+<td>4 × 1</td>
+<td>30 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 Second Slow Roller</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>15 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>No</td>
+<td>Recovery Raising HRV</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- end WEEK 7 Workouts -->
 </div>
 </section>
