, weekly recaps week 7, updated home page.

--- a/weekly-recaps.html
+++ b/weekly-recaps.html
@@ -93,7 +93,59 @@
         <section class="section">
           <div class="recap-list">
 
-             <!-- ====== WEEK 06 CARD (LATEST) ====== -->
+
+            <!-- ====== WEEK 07 CARD (LATEST) ====== -->
+            <article class="recap-card" data-week="2026-1-18">
+              <div class="recap-meta">Week 07 · Jan 12 – Jan 18, 2026</div>
+              <h2 class="recap-title">Rebuild Precision</h2>
+
+              <div class="recap-columns">
+                <div class="recap-text">
+                  <p>
+                   Week 7 was about building confidence while protecting fitness. Training volume remained steady, recovery was prioritized, and intensity was focused almost entirely in Zone 4 — keeping race-specific sharpness without introducing unnecessary stress. VO₂ max climbed into elite territory, HRV remained elite, and higher-intensity exposure was tightly controlled. This was a taper week designed to sharpen execution, not chase fitness.
+                  </p>
+
+                  <div class="card" style="margin-top: 10px;">
+                    <div class="card-tag">Reflection</div>
+                    <p class="card-body">
+                     <ul class="recap-wins">
+                      <li>Miles: 18.02 ( down from 19.14)</li>
+                      <li>Zone 3: decreased</li>
+                      <li>Zone 4: Increased 2.5 x</li>
+                      <li>Zone 5: Stayed out of this zone intentionally all week</li>
+                      <li>VO₂ max: 45.4 → 47.3 (strong rebound)</li>
+                      <li>Tapper leading up to race week and international travel</li>
+                      <li>Pacing discipline</li>
+                    </ul>
+                    </p>
+                  </div>
+
+                  <div class="recap-keypoints">
+                    <strong>Key metrics:</strong><br>
+                    • Total time: 10h 00m · 18.02 Total miles: <br>
+                    • HR Zones: Z1 376.45m ·Z2 100.4m · Z3 63.65m · Z4 55m · Z5 0m<br>
+                    • VO₂ Max: 42.8 → 45.2 · DOMS: One<br>
+                    • Theme: Fresh, Fast, Ready for Rade day in 13 days.
+                  </div>
+
+                  <div class="card" style="margin-top: 10px;">
+                    <div class="card-tag">Week 08 Focus</div>
+                    <p class="card-body">
+                    Week 8 ARRIVE CALM · EXECUTE CONFIDENT - International travel management, Sleep and hydration protection, Short, sharp activations, Working remotely (Timezone difference), Race-day execution only
+                    </p>
+                  </div>
+
+                  <div class="video-embed" style="margin-top: 12px;">
+                    <!-- Paste Synthesia Week 06 embed iframe below when ready -->
+                    <div class="video-embed">
+                    <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/3d01c2ce-3bdf-44a5-8679-305334eb28ab" loading="lazy" title="Synthesia video player - Hyrox Week 7 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
+                    </div>
+                </div>
+              </div>
+            </article>
+            <!-- ====== END WEEK 07 ====== -->
+
+             <!-- ====== WEEK 06 CARD ====== -->
             <article class="recap-card" data-week="2026-1-11">
               <div class="recap-meta">Week 06 · Jan 5 – Jan 11, 2026</div>
               <h2 class="recap-title">Rebuild Precision</h2>
@@ -416,7 +468,8 @@ The result was a week that didn’t look dramatic on paper, but quietly moved th
 
         // Week selector logic
         const RECAP_WEEKS = [
-          { key: "2026-1-11", label: "Week 06 (jan 5 – Jan 11, 2026)", default: true },  
+          { key: "2026-1-18", label: "Week 07 (Jan 12 – Jan 18, 2026)", default: true },  
+          { key: "2026-1-11", label: "Week 06 (Jan 5 – Jan 11, 2026)" },  
           { key: "2026-1-4", label: "Week 05 (Dec 29, 2025 – Jan 4, 2026)" },  
           { key: "2025-12-28", label: "Week 04 (Dec 22 – Dec 28, 2025)" },
           { key: "2025-12-21", label: "Week 03 (Dec 15 – Dec 21, 2025)" },
