--- a/workouts.html
+++ b/workouts.html
@@ -53,6 +53,7 @@
             <label for="weekSelect">Select week:</label>
             <select id="weekSelect">
               <!-- You can hard-code at first, or later populate dynamically -->
+              <option value="2026-1-19">Week 08 (Jan 19 – Jan 25)</option>
               <option value="2026-1-12">Week 07 (Jan 12 – Jan 18)</option>
               <option value="2026-1-5">Week 06 (Jan 5 – Jan 11)</option>
               <option value="2025-12-29">Week 05 (Dec 29 – Jan 4)</option>
@@ -64,6 +65,84 @@
             </select>
           </div>
         </section>
+
+ <!-- WEEK 8 (example: Jan 19 – Jan 25, 2026) -->
+<div class="week-log" data-week="2026-1-19">
+
+  <!-- Morning Readiness – Week 8 -->
+  <section class="dashboard-section">
+    <h2 class="section-title">Morning Readiness</h2>
+    <p class="section-subtitle">
+      HRV, resting HR, sleep, and body metrics that guide how hard to push this week.
+    </p>
+
+       <div class="readiness-grid">
+            <article class="card">
+              <div class="card-tag">Metrics</div>
+              <h3 class="card-title">Body composition / Body pod</h3>
+              <p class="card-body">
+                Screenshot or summary of body composition trends for the selected week.
+              </p>
+              <div class="metric-image-frame">
+  <img src="assets/img/Bodypod-Week8.jpg" alt="Body Pod Week 6">
+</div>
+</article>
+      <!-- Welltory card -->
+      <article class="card">
+              <div class="card-tag">Metrics</div>
+              <h3 class="card-title">Welltory</h3>
+              <p class="card-body">
+                HRV, stress, and readiness from Welltory that guide intensity for the day.
+              </p>
+              <div class="metric-image-frame">
+  <img src="assets/img/Welltory-Week8.jpg" alt="Welltory week 6">
+</div>
+</article>
+
+      <!-- Ultrahuman card -->
+       <article class="card">
+              <div class="card-tag">Metrics</div>
+              <h3 class="card-title">Ultrahuman Ring</h3>
+              <p class="card-body">
+                VO2 Max, HRV, and resting heart rate metrics that inform how aggressive the session should be.
+              </p>
+          <div class="metric-image-frame">
+            <img src="assets/img/Vo2max-week8.jpg" alt="Ultrahuman week 6">
+          </div>
+          <div class="metric-image-frame">
+            <img src="assets/img/Ultrahuman-week8.jpg" alt="Ultrahuman week 6">
+</div>
+</article>
+    </div>
+  </section>
+
+ <!-- Daily Workout Log – Week 8 -->
+  <section class="dashboard-section">
+    <h2 class="section-title">Daily Workout Log</h2>
+    <p class="section-subtitle">
+      Week 8 – each day with sessions, distances, and primary zone focus.
+    </p>
+
+    <div class="week-days">
+      
+<!-- Monday 1/19/26 – example with one card for today -->
+
+<!-- Tuesday 1/20/26 – example with one card for today -->
+
+<!-- Wednesday 1/21/26 – example with one card for today -->
+
+<!-- Thursday 1/22/26 – example with one card for today -->
+ 
+<!-- Friday 1/23/26 – example with one card for today -->
+
+<!-- Saturday 1/24/26 – example with one card for today -->
+
+<!-- Sunday 1/25/26 – example with one card for today -->
+
+<!-- end WEEK 8 Workouts -->
+</div>
+</section>
+</div> <!-- end WEEK 8 -->       
 
  <!-- WEEK 7 (example: Jan 12 – Jan 18, 2026) -->
 <div class="week-log" data-week="2026-1-12">
