--- a/index.html
+++ b/index.html
@@ -497,6 +497,60 @@
   </table>
   </div>
 
+  <!-- Week 08 -->
+        <div class="snapshot-week" data-sweek="2026-1-25">
+          <h4 class="snapshot-week-title">Week 08</h4>
+          <table class="snapshot-table">
+            <tbody>
+              <tr>
+                <tr class="zone-1">
+                  <td>Zone 1</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                 <tr class="zone-2">
+                  <td>Zone 2</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-3">
+                  <td>Zone 3</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-4">
+                  <td>Zone 4</td>
+                <td>0 min</td>
+              </tr>
+              <tr>
+                <tr class="zone-5">
+                  <td>Zone 5</td>
+                <td>0 min</td>
+              </tr>
+            </tbody>
+          </table>
+<table class="snapshot-table">
+    <tbody>
+      <tr>
+        <td><strong>Total Training Time</strong></td>
+        <td>00h 00m</td>
+      </tr>
+      <tr>
+        <td><strong>Total Miles</strong></td>
+        <td>0 miles</td>
+      </tr>
+      <tr>
+        <td><strong>VO₂ Max</strong></td>
+        <td>47.3 → 47.3</td>
+      </tr>
+      <tr>
+        <td><strong>DOMS</strong></td>
+        <td>None</td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
+
       </div>
     </article>
   </aside>
@@ -617,7 +671,7 @@
   <div class="card-tag">Video</div>
   <h3 class="card-title">Latest weekly recap video</h3>
   <div class="video-embed">
-    <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/aecf9647-ddf5-46fe-bd7e-0449d581d964" loading="lazy" title="Synthesia video player - Hyrox Week 6 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
+   <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/3d01c2ce-3bdf-44a5-8679-305334eb28ab" loading="lazy" title="Synthesia video player - Hyrox Week 7 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
   </div>
 
   
@@ -680,7 +734,8 @@
 
         // Training Snapshot selector (defaults to latest week; does NOT affect "This week at a glance")
         const SNAPSHOT_WEEKS = [
-        { key: "2026-1-18", label: "Week 07 (Jan 12 – Jan 18)", default: true }, 
+        { key: "2026-1-25", label: "Week 08 (Jan 19 – Jan 25)", default: true }, 
+        { key: "2026-1-18", label: "Week 07 (Jan 12 – Jan 18)" }, 
         { key: "2026-1-11", label: "Week 06 (Jan 5 – Jan 11)" }, 
         { key: "2026-1-4", label: "Week 05 (Dec 29 – Jan 4)" }, 
         { key: "2025-12-28", label: "Week 04 (Dec 22 – Dec 28)" }, 
