--- a/workouts.html
+++ b/workouts.html
@@ -424,9 +424,397 @@
 </div>
 </article>
 <!-- Tuesday 1/20/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Tuesday – 08</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 5.25 hrs · Score 76</li>
+<li><strong>HRV:</strong> 65 ms · <strong>Resting HR:</strong> 58 bpm</li>
+<li><strong>VO₂ Max:</strong> 47.3</li>
+<li><strong>Weight:</strong> 178.1 lb · 11.9% BF · Lean Mass 143.2 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2356 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill After Travel walk</span>
+<span class="session-meta">20 min · 1.24 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill After Travel walk</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>Zone 1 Endurance</td>
+<td>Raise VO2 Max session 4 MPH</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- Wednesday 1/21/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Wednesday – 08</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 8 hrs · Score 75</li>
+<li><strong>HRV:</strong> 80 ms · <strong>Resting HR:</strong> 50 bpm</li>
+<li><strong>VO₂ Max:</strong> 47.3</li>
+<li><strong>Weight:</strong> 178.1 lb · 11.9% BF · Lean Mass 143.2 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2356 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill Warm up Walk</span>
+<span class="session-meta">10 min · 0.62 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Warm up Walk</td>
+<td>-</td>
+<td>10 min</td>
+<td>-</td>
+<td>Zone 1 Endurance</td>
+<td>Raise VO2 Max session 4 MPH</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>10 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill Run</span>
+<span class="session-meta">15.75 min · 1.86 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 4</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Run</td>
+<td>-</td>
+<td>15.75 min</td>
+<td>-</td>
+<td>Yes</td>
+<td>3 x 1K Run 7.5 MPH 5:15 1k pace</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>2.75 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>3.5 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>4.25 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>5.25 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Hyrox Row</span>
+<span class="session-meta">4.25 min · 0.62 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 3</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Rower 1000 meters</td>
+<td>1 × 1 @ 4 lb</td>
+<td>267 sec</td>
+<td>Both</td>
+<td>Rower</td>
+<td>4:27 1000 meters</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>3 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>1 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">NSDR Breathing</span>
+<span class="session-meta">20 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>NSDR Breathing</td>
+<td>-</td>
+<td>20 min</td>
+<td>-</td>
+<td>No</td>
+<td>Recovery Raising HRV</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>20 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- Thursday 1/22/26 – example with one card for today -->
  
 <!-- Friday 1/23/26 – example with one card for today -->
