--- a/workouts.html
+++ b/workouts.html
@@ -816,7 +816,267 @@
 </div>
 </article>
 <!-- Thursday 1/22/26 – example with one card for today -->
- 
+ <article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Thursday – 08</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
+
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 8.25 hrs · Score 82</li>
+<li><strong>HRV:</strong> 82 ms · <strong>Resting HR:</strong> 45 bpm</li>
+<li><strong>VO₂ Max:</strong> 47.3</li>
+<li><strong>Weight:</strong> 178.1 lb · 11.9% BF · Lean Mass 143.2 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> 1 / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2356 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Midday stretch</span>
+<span class="session-meta">15 min</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Periformis stretch</td>
+<td>2 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Hamstring stretch</td>
+<td>2 × 1</td>
+<td>60 sec</td>
+<td>Both</td>
+<td>Other</td>
+<td>60 second hold each set</td>
+</tr>
+<tr>
+<td>Calf Stretch</td>
+<td>2 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Tibialias Anterior Stretch</td>
+<td>2 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+<tr>
+<td>Tibialias / calves Roller</td>
+<td>2 × 1</td>
+<td>60 sec</td>
+<td>Alternating</td>
+<td>Other</td>
+<td>60 second hold each leg</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>15 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill Warm up Walk</span>
+<span class="session-meta">9.8 min · 0.62 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Warm up Walk</td>
+<td>-</td>
+<td>9.8 min</td>
+<td>-</td>
+<td>Zone 1 Endurance</td>
+<td>Raise VO2 Max session 4 MPH</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>9.8 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Treadmill Run</span>
+<span class="session-meta">10.45 min · 1.24 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 4</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Run</td>
+<td>-</td>
+<td>10.45 min</td>
+<td>-</td>
+<td>Yes</td>
+<td>Run 7.5 MPH 5:15 1k pace</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>0.2 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0.5 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>4.25 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>5.5 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- Friday 1/23/26 – example with one card for today -->
 
 <!-- Saturday 1/24/26 – example with one card for today -->
