--- a/workouts.html
+++ b/workouts.html
@@ -1078,7 +1078,41 @@
 </div>
 </article>
 <!-- Friday 1/23/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Friday – 08</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 3 hrs · Score 33</li>
+<li><strong>HRV:</strong> 35 ms · <strong>Resting HR:</strong> 48 bpm</li>
+<li><strong>VO₂ Max:</strong> 47.3</li>
+<li><strong>Weight:</strong> 177.5 lb · 12.5% BF · Lean Mass 141.5 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 6 / 10 · <strong>Stress:</strong> - / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 5 / 10</li>
+<li><strong>BCE:</strong> 2356 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">No logged sessions</span>
+<span class="session-meta">—</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+<p>No training sessions recorded for this day. One day to race day, rest and relax is priority.</p>
+</div>
+</div>
+</article>
 <!-- Saturday 1/24/26 – example with one card for today -->
 
 <!-- Sunday 1/25/26 – example with one card for today -->
