Weekend week8 workouts

--- a/workouts.html
+++ b/workouts.html
@@ -1114,9 +1114,313 @@
 </div>
 </article>
 <!-- Saturday 1/24/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Saturday – 08</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 8.5 hrs · Score 88</li>
+<li><strong>HRV:</strong> 88 ms · <strong>Resting HR:</strong> 47 bpm</li>
+<li><strong>VO₂ Max:</strong> 47.3</li>
+<li><strong>Weight:</strong> 177.5 lb · 12.5% BF · Lean Mass 141.5 lb</li>
+<li><strong>DOMS:</strong> - · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> - / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2356 · <strong>KVAS:</strong> 16</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Amsterdam Hyrox race (DNF) 1:33:30 total time</span>
+<span class="session-meta">93.5 min · 4.96 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 4</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>1st 1K run</td>
+<td>1 × 1</td>
+<td>291 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>Rox zone rest 5 seconds</td>
+</tr>
+<tr>
+<td>SkiERG</td>
+<td>1 × 1 @ 4 lb</td>
+<td>266 sec</td>
+<td>Both</td>
+<td>SKiERG</td>
+<td>Damper 4 Rox zone rest 15 seconds</td>
+</tr>
+<tr>
+<td>2nd 1K run</td>
+<td>1 × 1</td>
+<td>361 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>Rox zone rest 15 seconds</td>
+</tr>
+<tr>
+<td>Sled Push</td>
+<td>1 × 4 @ 335 lb</td>
+<td>188 sec</td>
+<td>Both</td>
+<td>Sled Push</td>
+<td>Rox zone rest 20 seconds</td>
+</tr>
+<tr>
+<td>3rd 1K run</td>
+<td>1 × 1</td>
+<td>394 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>Rox zone rest 20 seconds</td>
+</tr>
+<tr>
+<td>Sled Pull</td>
+<td>1 × 4 @ 227 lb</td>
+<td>386 sec</td>
+<td>Both</td>
+<td>Sled Pull</td>
+<td>Rox zone rest 20 seconds</td>
+</tr>
+<tr>
+<td>4th 1K run</td>
+<td>1 × 1</td>
+<td>412 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>Rox zone rest 20 seconds</td>
+</tr>
+<tr>
+<td>Burpee Broad Jump</td>
+<td>1 × 45</td>
+<td>435 sec</td>
+<td>Both</td>
+<td>Burpee Broad Jump</td>
+<td>Rox zone rest 20 seconds</td>
+</tr>
+<tr>
+<td>5th 1K run</td>
+<td>1 × 1</td>
+<td>362 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>Rox zone rest 20 seconds</td>
+</tr>
+<tr>
+<td>Rower</td>
+<td>1 × 1 @ 4 lb</td>
+<td>259 sec</td>
+<td>Both</td>
+<td>Rower</td>
+<td>Damper 4 Rox zone rest 20 seconds</td>
+</tr>
+<tr>
+<td>6th 1K run</td>
+<td>1 × 1</td>
+<td>315 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>Rox zone rest 20 seconds</td>
+</tr>
+<tr>
+<td>Farmers Carry</td>
+<td>1 × 1 @ 104 lb</td>
+<td>128 sec</td>
+<td>Both</td>
+<td>Farmers Carry</td>
+<td>Rox zone rest 20 seconds</td>
+</tr>
+<tr>
+<td>7th 1K run</td>
+<td>1 × 1</td>
+<td>318 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>Rox zone rest 20 seconds</td>
+</tr>
+<tr>
+<td>Lunges </td>
+<td>1 × 100 @ 44 lb</td>
+<td>358 sec</td>
+<td>Alternating</td>
+<td>Lunges</td>
+<td>Rox zone rest 20 seconds</td>
+</tr>
+<tr>
+<td>8th 1K run</td>
+<td>1 × 1</td>
+<td>451 sec</td>
+<td>Both</td>
+<td>Run</td>
+<td>Rox zone rest 126 seconds</td>
+</tr>
+<tr>
+<td>Wall Balls</td>
+<td>1 × 30 @ 14 lb</td>
+<td>305 sec</td>
+<td>Both</td>
+<td>Wall Ball</td>
+<td>DNF Hit respiratory Limit</td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>1.5 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>3.75 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>19 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>66.25 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>3 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- Sunday 1/25/26 – example with one card for today -->
+<article class="card workout-day">
+<div class="workout-day-header">
+<div class="workout-date">Sunday – 08</div>
+<div class="workout-tag">Daily Training Summary</div>
+</div>
 
+
+<div class="daily-metrics-block">
+<h4>Daily Metrics</h4>
+<ul class="daily-metrics-list">
+<li><strong>Sleep:</strong> 10.5 hrs · Score 74</li>
+<li><strong>HRV:</strong> 47 ms · <strong>Resting HR:</strong> 61 bpm</li>
+<li><strong>VO₂ Max:</strong> 46.5</li>
+<li><strong>Weight:</strong> 177.5 lb · 12.5% BF · Lean Mass 141.5 lb</li>
+<li><strong>DOMS:</strong> 2 · <strong>Energy:</strong> 9 / 10 · <strong>Stress:</strong> - / 10</li>
+<li><strong>Hydration:</strong> Hydrated · <strong>Mood:</strong> 9 / 10</li>
+<li><strong>BCE:</strong> 2470 · <strong>KVAS:</strong> 17</li>
+</ul>
+</div>
+
+
+<div class="sessions-list">
+
+<div class="session">
+<div class="session-header">
+<div class="session-main">
+<span class="session-name">Recovery day Treadmill Warm up Walk</span>
+<span class="session-meta">9.75 min · 0.62 mi</span>
+</div>
+<div class="session-zone">Primary Zone: Zone 1</div>
+</div>
+
+<table class="session-table">
+<thead>
+<tr>
+<th>Exercise</th>
+<th>Reps / Load</th>
+<th>Duration</th>
+<th>Side / Stance</th>
+<th>Hyrox Focus</th>
+<th>Notes</th>
+</tr>
+</thead>
+<tbody>
+
+<tr>
+<td>Treadmill Warm up Walk</td>
+<td>-</td>
+<td>9.75 min</td>
+<td>-</td>
+<td>No</td>
+<td>Recovery walk </td>
+</tr>
+</tbody>
+</table>
+
+
+<div class="session-hr-summary">
+<h4>Heart Rate Summary</h4>
+<table class="snapshot-table">
+<thead>
+<tr>
+<th colspan="2">HR Zones</th>
+</tr>
+</thead>
+<tbody>
+<tr class="zone-1">
+<td>Zone 1</td>
+<td>9.75 min</td>
+</tr>
+<tr class="zone-2">
+<td>Zone 2</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-3">
+<td>Zone 3</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-4">
+<td>Zone 4</td>
+<td>0 min</td>
+</tr>
+<tr class="zone-5">
+<td>Zone 5</td>
+<td>0 min</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+</div>
+</article>
 <!-- end WEEK 8 Workouts -->
 </div>
 </section>
