Weekly recap week8

--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
   <div class="card-tag">Video</div>
   <h3 class="card-title">Latest weekly recap video</h3>
   <div class="video-embed">
-   <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/3d01c2ce-3bdf-44a5-8679-305334eb28ab" loading="lazy" title="Synthesia video player - Hyrox Week 7 Recap" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
+   <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/07f926ec-7f97-4633-ac1f-e7c5b76d8f00" loading="lazy" title="Synthesia video player - HYROX Race Day DNF" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
   </div>
 
   
