--- a/weekly-recaps.html
+++ b/weekly-recaps.html
@@ -93,8 +93,58 @@
         <section class="section">
           <div class="recap-list">
 
+            <!-- ====== WEEK 08 CARD (LATEST) ====== -->
+            <article class="recap-card" data-week="2026-1-25">
+              <div class="recap-meta">Week 08 · Jan 19 – Jan 25, 2026</div>
+              <h2 class="recap-title">Execution, Limits, and What Comes Next</h2>
 
-            <!-- ====== WEEK 07 CARD (LATEST) ====== -->
+              <div class="recap-columns">
+                <div class="recap-text">
+                  <p>
+                   Week 8 Was Race week! Travel, Work and Race day! This resulted in a DNF despite the time, hard work, pacing, dicipline and race management. 
+                  </p>
+
+                  <div class="card" style="margin-top: 10px;">
+                    <div class="card-tag">Reflection</div>
+                    <p class="card-body">
+                     <ul class="recap-wins">
+                      <li>Miles: 14.88 ( down from 18.02)</li>
+                      <li>Zone 3: almost doubled despite less training due to race day.</li>
+                      <li>Zone 4: Increased almost 2 x due to race day.</li>
+                      <li>Zone 5: readlined during race day. </li>
+                      <li>VO₂ max: 47.3 → 46.5 (Surpressed due to stress)</li>
+                      <li>Tapper leading up to race day and international travel</li>
+                      <li>Pacing discipline</li>
+                    </ul>
+                    </p>
+                  </div>
+
+                  <div class="recap-keypoints">
+                    <strong>Key metrics:</strong><br>
+                    • Total time: 4h 24m · 14.88 Total miles: <br>
+                    • HR Zones: Z1 124m ·Z2 16.754m · Z3 103m · Z4 16.5m · Z5 5m<br>
+                    • VO₂ Max: 47l3 → 46.5 · DOMS: One<br>
+                    • Theme: Execution, Limits, and What Comes Next
+                  </div>
+
+                  <div class="card" style="margin-top: 10px;">
+                    <div class="card-tag">Week 09 Focus</div>
+                    <p class="card-body">
+                    Week 9 Decompress after race day, process the DNF and decide if the journey should continue.....
+                    </p>
+                  </div>
+
+                  <div class="video-embed" style="margin-top: 12px;">
+                    <!-- Paste Synthesia Week 06 embed iframe below when ready -->
+                    <div class="video-embed">
+                    <div style="position: relative; overflow: hidden; aspect-ratio: 1920/1080"><iframe src="https://share.synthesia.io/embeds/videos/07f926ec-7f97-4633-ac1f-e7c5b76d8f00" loading="lazy" title="Synthesia video player - HYROX Race Day DNF" allowfullscreen allow="encrypted-media; fullscreen; microphone;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
+                    </div>
+                </div>
+              </div>
+            </article>
+            <!-- ====== END WEEK 08 ====== -->
+
+            <!-- ====== WEEK 07 CARD ====== -->
             <article class="recap-card" data-week="2026-1-18">
               <div class="recap-meta">Week 07 · Jan 12 – Jan 18, 2026</div>
               <h2 class="recap-title">Rebuild Precision</h2>
@@ -468,7 +518,8 @@ The result was a week that didn’t look dramatic on paper, but quietly moved th
 
         // Week selector logic
         const RECAP_WEEKS = [
-          { key: "2026-1-18", label: "Week 07 (Jan 12 – Jan 18, 2026)", default: true },  
+          { key: "2026-1-25", label: "Week 08 (Jan 19 – Jan 25, 2026)", default: true },   
+          { key: "2026-1-18", label: "Week 07 (Jan 12 – Jan 18, 2026)", },  
           { key: "2026-1-11", label: "Week 06 (Jan 5 – Jan 11, 2026)" },  
           { key: "2026-1-4", label: "Week 05 (Dec 29, 2025 – Jan 4, 2026)" },  
           { key: "2025-12-28", label: "Week 04 (Dec 22 – Dec 28, 2025)" },
